fixed small layout issue

--- a/style.css
+++ b/style.css
@@ -110,10 +110,9 @@ a {
   min-height: 100%;
   display: inline-block;
   padding:10px 10px 10px 10px;
-    min-width: 608px;
-    height: 100%;
-    display: inline-block;
-    vertical-align: top;
+  height: 100%;
+  display: inline-block;
+  vertical-align: top;
 }
 .mainpost{
   border: 1px solid gray;
